--- a/NEA/qss/icons/Icons.qrc
+++ b/NEA/qss/icons/Icons.qrc
@@ -8,6 +8,185 @@
     <file>png2svg/ArrowE-white.svg</file>
     <file>png2svg/Camera.svg</file>
     <file>png2svg/camera-green.svg</file>
+    <file>png2svg/Camera-Off.svg</file>
+    <file>png2svg/camera-On.svg</file>
+    <file>png2svg/camera-white.svg</file>
+    <file>png2svg/Catalogue.svg</file>
+    <file>png2svg/checklist-green.svg</file>
+    <file>png2svg/checklist-white.svg</file>
+    <file>png2svg/collapse-green.svg</file>
+    <file>png2svg/collapse-white.svg</file>
+    <file>png2svg/continue-green.svg</file>
+    <file>png2svg/continue-white.svg</file>
+    <file>png2svg/exit-green.svg</file>
+    <file>png2svg/exit-white.svg</file>
+    <file>png2svg/expand-green.svg</file>
+    <file>png2svg/expand-white.svg</file>
+    <file>png2svg/goback-green.svg</file>
+    <file>png2svg/goback-white.svg</file>
+    <file>png2svg/help-green.svg</file>
+    <file>png2svg/help-white.svg</file>
+    <file>png2svg/home-green.svg</file>
+    <file>png2svg/home-white.svg</file>
+    <file>png2svg/info-icon.svg</file>
+    <file>png2svg/login-green.svg</file>
+    <file>png2svg/login-white.svg</file>
+    <file>png2svg/logout-green.svg</file>
+    <file>png2svg/logout-white.svg</file>
+    <file>png2svg/menu-green.svg</file>
+    <file>png2svg/menu-white.svg</file>
+    <file>png2svg/minimise-green.svg</file>
+    <file>png2svg/minimise-white.svg</file>
+    <file>png2svg/notifications_icon.svg</file>
+    <file>png2svg/pause_green.svg</file>
+    <file>png2svg/pause_white.svg</file>
+    <file>png2svg/play_green.svg</file>
+    <file>png2svg/play_white.svg</file>
+    <file>png2svg/play-green.svg</file>
+    <file>png2svg/play-white.svg</file>
+    <file>png2svg/profile-green.svg</file>
+    <file>png2svg/profile-white.svg</file>
+    <file>png2svg/quitmenu-green.svg</file>
+    <file>png2svg/quitmenu-white.svg</file>
+    <file>png2svg/retry-green.svg</file>
+    <file>png2svg/retry-white.svg</file>
+    <file>png2svg/search-green.svg</file>
+    <file>png2svg/search-white.svg</file>
+    <file>png2svg/settings-green.svg</file>
+    <file>png2svg/settings-white.svg</file>
+    <file>png2svg/Signit-green.svg</file>
+    <file>png2svg/Signit-white.svg</file>
+    <file>png2svg/signup-green.svg</file>
+    <file>png2svg/signup-white.svg</file>
+    <file>png2svg/SpellingBee.svg</file>
+    <file>png2svg/stop_green.svg</file>
+    <file>png2svg/stop_white.svg</file>
+    <file>png2svg/SwitchCamera.svg</file>
+    <file>png2svg/warning-icon.svg</file>
+    <file>png2svg/ai-green.svg</file>
+    <file>png2svg/ai-white.svg</file>
+    <file>png2svg/ArrowC-green.svg</file>
+    <file>png2svg/ArrowC-white.svg</file>
+    <file>png2svg/ArrowE-green.svg</file>
+    <file>png2svg/ArrowE-white.svg</file>
+    <file>png2svg/Camera.svg</file>
+    <file>png2svg/camera-green.svg</file>
+    <file>png2svg/camera-white.svg</file>
+    <file>png2svg/Catalogue.svg</file>
+    <file>png2svg/checklist-green.svg</file>
+    <file>png2svg/checklist-white.svg</file>
+    <file>png2svg/collapse-green.svg</file>
+    <file>png2svg/collapse-white.svg</file>
+    <file>png2svg/continue-green.svg</file>
+    <file>png2svg/continue-white.svg</file>
+    <file>png2svg/exit-green.svg</file>
+    <file>png2svg/exit-white.svg</file>
+    <file>png2svg/expand-green.svg</file>
+    <file>png2svg/expand-white.svg</file>
+    <file>png2svg/goback-green.svg</file>
+    <file>png2svg/goback-white.svg</file>
+    <file>png2svg/help-green.svg</file>
+    <file>png2svg/help-white.svg</file>
+    <file>png2svg/home-green.svg</file>
+    <file>png2svg/home-white.svg</file>
+    <file>png2svg/info-icon.svg</file>
+    <file>png2svg/login-green.svg</file>
+    <file>png2svg/login-white.svg</file>
+    <file>png2svg/logout-green.svg</file>
+    <file>png2svg/logout-white.svg</file>
+    <file>png2svg/menu-green.svg</file>
+    <file>png2svg/menu-white.svg</file>
+    <file>png2svg/minimise-green.svg</file>
+    <file>png2svg/minimise-white.svg</file>
+    <file>png2svg/notifications_icon.svg</file>
+    <file>png2svg/pause_green.svg</file>
+    <file>png2svg/pause_white.svg</file>
+    <file>png2svg/play_green.svg</file>
+    <file>png2svg/play_white.svg</file>
+    <file>png2svg/play-green.svg</file>
+    <file>png2svg/play-white.svg</file>
+    <file>png2svg/profile-green.svg</file>
+    <file>png2svg/profile-white.svg</file>
+    <file>png2svg/quitmenu-green.svg</file>
+    <file>png2svg/quitmenu-white.svg</file>
+    <file>png2svg/retry-green.svg</file>
+    <file>png2svg/retry-white.svg</file>
+    <file>png2svg/search-green.svg</file>
+    <file>png2svg/search-white.svg</file>
+    <file>png2svg/settings-green.svg</file>
+    <file>png2svg/settings-white.svg</file>
+    <file>png2svg/Signit-green.svg</file>
+    <file>png2svg/Signit-white.svg</file>
+    <file>png2svg/signup-green.svg</file>
+    <file>png2svg/signup-white.svg</file>
+    <file>png2svg/SpellingBee.svg</file>
+    <file>png2svg/stop_green.svg</file>
+    <file>png2svg/stop_white.svg</file>
+    <file>png2svg/SwitchCamera.svg</file>
+    <file>png2svg/warning-icon.svg</file>
+    <file>png2svg/ai-green.svg</file>
+    <file>png2svg/ai-white.svg</file>
+    <file>png2svg/ArrowC-green.svg</file>
+    <file>png2svg/ArrowC-white.svg</file>
+    <file>png2svg/ArrowE-green.svg</file>
+    <file>png2svg/ArrowE-white.svg</file>
+    <file>png2svg/Camera.svg</file>
+    <file>png2svg/camera-green.svg</file>
+    <file>png2svg/camera-white.svg</file>
+    <file>png2svg/Catalogue.svg</file>
+    <file>png2svg/checklist-green.svg</file>
+    <file>png2svg/checklist-white.svg</file>
+    <file>png2svg/collapse-green.svg</file>
+    <file>png2svg/collapse-white.svg</file>
+    <file>png2svg/continue-green.svg</file>
+    <file>png2svg/continue-white.svg</file>
+    <file>png2svg/exit-green.svg</file>
+    <file>png2svg/exit-white.svg</file>
+    <file>png2svg/expand-green.svg</file>
+    <file>png2svg/expand-white.svg</file>
+    <file>png2svg/goback-green.svg</file>
+    <file>png2svg/goback-white.svg</file>
+    <file>png2svg/help-green.svg</file>
+    <file>png2svg/help-white.svg</file>
+    <file>png2svg/home-green.svg</file>
+    <file>png2svg/home-white.svg</file>
+    <file>png2svg/info-icon.svg</file>
+    <file>png2svg/login-green.svg</file>
+    <file>png2svg/login-white.svg</file>
+    <file>png2svg/logout-green.svg</file>
+    <file>png2svg/logout-white.svg</file>
+    <file>png2svg/menu-green.svg</file>
+    <file>png2svg/menu-white.svg</file>
+    <file>png2svg/minimise-green.svg</file>
+    <file>png2svg/minimise-white.svg</file>
+    <file>png2svg/notifications_icon.svg</file>
+    <file>png2svg/play-green.svg</file>
+    <file>png2svg/play-white.svg</file>
+    <file>png2svg/profile-green.svg</file>
+    <file>png2svg/profile-white.svg</file>
+    <file>png2svg/quitmenu-green.svg</file>
+    <file>png2svg/quitmenu-white.svg</file>
+    <file>png2svg/retry-green.svg</file>
+    <file>png2svg/retry-white.svg</file>
+    <file>png2svg/search-green.svg</file>
+    <file>png2svg/search-white.svg</file>
+    <file>png2svg/settings-green.svg</file>
+    <file>png2svg/settings-white.svg</file>
+    <file>png2svg/Signit-green.svg</file>
+    <file>png2svg/Signit-white.svg</file>
+    <file>png2svg/signup-green.svg</file>
+    <file>png2svg/signup-white.svg</file>
+    <file>png2svg/SpellingBee.svg</file>
+    <file>png2svg/SwitchCamera.svg</file>
+    <file>png2svg/warning-icon.svg</file>
+    <file>png2svg/ai-green.svg</file>
+    <file>png2svg/ai-white.svg</file>
+    <file>png2svg/ArrowC-green.svg</file>
+    <file>png2svg/ArrowC-white.svg</file>
+    <file>png2svg/ArrowE-green.svg</file>
+    <file>png2svg/ArrowE-white.svg</file>
+    <file>png2svg/Camera.svg</file>
+    <file>png2svg/camera-green.svg</file>
     <file>png2svg/camera-white.svg</file>
     <file>png2svg/Catalogue.svg</file>
     <file>png2svg/checklist-green.svg</file>
